PX-190 Fixed global search overlaid text on IE

--- a/sugarcrm/styleguide/less/sugar/globalsearch.less
+++ b/sugarcrm/styleguide/less/sugar/globalsearch.less
@@ -345,7 +345,7 @@ li.search-result {
       margin-top: 0;
       line-height: 18px;
       font-weight: normal;
-      display: inline;
+      display: inline-block;
 
       .ellipsis_inline {
         display: inherit !important;
